# kube-helper-ai-demo

./: .envrc  .gitignore  base_pipelines_image.nix  deploy.nix  flake.nix  helmfile.yaml  helmfile.yaml.gotmpl  helper.py  miner_image.nix  pipelines_image.nix  pyproject.toml  restart-demo
