[tool.poetry]
name = "open-webui-kube-helper"
version = "0.1.0"
description = ""
authors = ["Fede Barcelona <fede_rico_94@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
